Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-28256

Weird behavior of QWebView Horizontal scrollbar in RTL layout

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.2.1
    • 4.8.4, 5.0.1, 5.1.0
    • WebKit
    • None
    • linux, windows

      the problem is in vertical scrollbar, it have a strange behavior with RTL layout direction
      to reproduce this problem, run 'rekonq -reverse' and open any url and resize the window until you see the horizontal scrollbar and try to move it, you will notice that we should move this scrollbar to the right position to scroll the page
      please see the attached video

        1. QtWebKitScrollbars.html
          21 kB
        2. vi.ogg.ogv
          3.34 MB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            allan.jensen Allan Sandfeld Jensen
            boussouira Ahmed Saidi
            Votes:
            1 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes