Fix scroll-bar behavior in RTL layout

Default to application layout direction when no widget is given,
and reverse meaning of position for horizontal RTL scrollbars.

Task-numer: QTBUG-28256
Change-Id: I09c49f5d104fd0b9a6b4b1cda5c754712fc26087
Reviewed-by: Michael Bruning <michael.bruning@digia.com>
Reviewed-by: Andras Becsi <andras.becsi@digia.com>